@@ -83,6 +83,8 @@ SourceIpAddress1=192.168.21.87
 SourceIpAddress2=192.168.21.97
 
 [Output1]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=1
 Netcue1=A01
 Netcue2=A02
 Netcue3=A03
@@ -90,6 +92,8 @@ Netcue4=A04
 Netcue5=A05
 
 [Output2]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=2
 Netcue1=B01
 Netcue2=B02
 Netcue3=B03
@@ -97,6 +101,8 @@ Netcue4=B04
 Netcue5=B05
 
 [Output3]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=3
 Netcue1=C01
 Netcue2=C02
 Netcue3=C03
@@ -104,6 +110,8 @@ Netcue4=C04
 Netcue5=C05
 
 [Output4]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=4
 Netcue1=D01
 Netcue2=D02
 Netcue3=D03
@@ -111,6 +119,8 @@ Netcue4=D04
 Netcue5=D05
 
 [Output5]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=5
 Netcue1=E01
 Netcue2=E02
 Netcue3=E03
@@ -118,6 +128,8 @@ Netcue4=E04
 Netcue5=E05
 
 [Output6]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=6
 Netcue1=F01
 Netcue2=F02
 Netcue3=F03
@@ -125,6 +137,8 @@ Netcue4=F04
 Netcue5=F05
 
 [Output7]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=7
 Netcue1=G01
 Netcue2=G02
 Netcue3=G03
@@ -132,6 +146,8 @@ Netcue4=G04
 Netcue5=G05
 
 [Output8]
+BreakawayIpAddress=1.2.3.4
+BreakawaySlotNumber=8
 Netcue1=H01
 Netcue2=H02
 Netcue3=H03
