@@ -32,6 +32,7 @@
 #include "protocol_gpio.h"
 #include "protocol_rml.h"
 #include "protocol_sap.h"
+#include "router_breakaway.h"
 #include "router_cic.h"
 #include "router_gpio.h"
 #include "router_hpiaudio.h"
@@ -52,6 +53,7 @@ class MainObject : public QObject
 
  private:
   RouterHpiAudio *main_audio_router;
+  RouterBreakaway *main_breakaway_router;
   RouterCic *main_cic_router;
   RouterGpio *main_gpio_router;
   ProtocolCunc *main_cunc_protocol;
